--- a/package.json
+++ b/package.json
@@ -1,45 +1,14 @@
 {
-  "name": "mar-paraiso-frontend",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:mar_paraiso-frontend": "node dist/mar_paraiso-frontend/server/server.mjs"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.2",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.3",
-    "@angular/cli": "^19.1.3",
-    "@angular/compiler-cli": "^19.1.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "@angular-devkit/build-angular": "^15.2.11",
+    "@angular/cli": "^15.2.11",
+    "@angular/core": "^15.2.10",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@angular/common": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/platform-server": "^19.1.2",
+    "@angular/router": "^15.2.10"
   }
 }
