--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
-    "@angular/core": "^15.2.10",
+    "@angular-devkit/build-angular": "^16.2.16",
+    "@angular/cli": "^16.2.16",
+    "@angular/core": "^16.2.12",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@angular/common": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/platform-server": "^19.1.2",
-    "@angular/router": "^15.2.10"
+    "@angular/common": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-server": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "express": "^4.21.2",
+    "zone.js": "^0.15.0"
   }
 }
