--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
               {
                 "glob": "**/*",
                 "input": "src/assets",
-                "output": "/assets"
+                "output": "assets"
               }
             ],
             "styles": ["src/styles.css"],
@@ -79,7 +79,7 @@
               {
                 "glob": "**/*",
                 "input": "src/assets",
-                "output": "/assets"
+                "output": "assets"
               }
             ],
             "styles": ["src/styles.css"],
